# mini-eq

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  io.github.bhack.mini-eq.json  io.github.bhack.mini-eq.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: io.github.bhack.mini-eq.desktop  io.github.bhack.mini-eq.metainfo.xml
docker/: ubuntu-24.04-wp04.Dockerfile
docs/: flathub.md  performance.md  release.md
docs/screenshots/: README.md
extensions/gnome-shell/: README.md
extensions/gnome-shell/mini-eq@bhack.github.io/: extension.js  metadata.json
src/mini_eq/: __init__.py  __main__.py  analyzer.py  analyzer_widget.py  app.py  appearance.py  band_fader.py  cli.py  core.py  dbus_control.py  deps.py  desktop_integration.py  ebur128.py  filter_chain.py  filter_glyph.py  glib_utils.py  gtk_utils.py  instance.py  routing.py  screenshot.py  style.css  window.py  window_analyzer.py  window_graph.py  window_headroom.py  window_layout.py  window_presets.py  window_utility.py  window_utils.py  wireplumber_backend.py  wireplumber_stream_router.py
tests/: _mini_eq_imports.py  test_gnome_shell_extension.py  test_mini_eq_analyzer.py  test_mini_eq_app.py  test_mini_eq_appearance.py  test_mini_eq_cli.py  test_mini_eq_core.py  test_mini_eq_dbus_control.py  test_mini_eq_deps.py  test_mini_eq_desktop_integration.py  test_mini_eq_ebur128.py  test_mini_eq_filter_chain.py  test_mini_eq_instance.py  test_mini_eq_output_presets.py  test_mini_eq_routing.py  test_mini_eq_window.py  test_mini_eq_window_analyzer.py  test_mini_eq_window_graph.py  test_mini_eq_wireplumber_backend.py  test_mini_eq_wireplumber_stream_router.py  test_version_metadata.py
tools/: benchmark_fader_drag.py  check_flathub_manifest_drift.py  check_flatpak_runtime.py  check_gnome_shell_extension.py  check_wireplumber_gi.py  demo_runtime.py  pack_gnome_shell_extension.sh  profile_live_app.py  profile_sysprof.py  release_post_publish.py  release_preflight.py  render_demo_screenshot.py  render_social_preview.py  run_flatpak_runtime_smoke_ci.sh  run_gnome_extension_dev_shell.sh
tools/gnome-shell-extension/: fake_mini_eq_control.py
