[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-eq"
version = "0.1.4"
description = "Compact PipeWire system-wide parametric equalizer for Linux desktops."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "bhack" }]
keywords = [
    "audio",
    "desktop",
    "equalizer",
    "equalizer-apo",
    "filter-chain",
    "flatpak",
    "gtk",
    "jack",
    "libadwaita",
    "linux",
    "parametric-eq",
    "pipewire",
    "spectrum-analyzer",
    "wireplumber",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
dependencies = ["JACK-Client>=0.5.5", "numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/bhack/mini-eq"
Repository = "https://github.com/bhack/mini-eq"
Issues = "https://github.com/bhack/mini-eq/issues"
Changelog = "https://github.com/bhack/mini-eq/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=8"]
dev = ["build>=1.2", "packaging>=24.2", "Pillow>=10", "pytest>=8", "ruff>=0.12", "twine>=6.2"]

[project.scripts]
mini-eq = "mini_eq.__main__:console_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mini_eq = [
    "style.css",
    "assets/icons/hicolor/*/apps/*.png",
    "assets/icons/hicolor/scalable/actions/*.svg",
    "assets/source/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = ["E402"]
